@@ -27,6 +27,7 @@ use Path::Tiny;
         [
             grep {
                 /\[VerifyPhases\]/
+                && ! /^\[VerifyPhases\] .* has already been calculated by end of file gathering phase/
                 && ( Dist::Zilla->VERSION < 5.022
                     ? ! /^\[VerifyPhases\] file has been added by end of file gathering phase: 'Makefile.PL'/
                     : 1 )
